--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.6.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
@@ -23,7 +24,11 @@
     "@mikro-orm/core": "^4.0.0-alpha.0",
     "@mikro-orm/migrations": "^4.0.0-alpha.0",
     "@mikro-orm/postgresql": "^4.0.0-alpha.0",
-    "pg": "^8.3.3"
+    "apollo-server-express": "^2.17.0",
+    "express": "^4.17.1",
+    "graphql": "^15.3.0",
+    "pg": "^8.3.3",
+    "type-graphql": "^1.0.0"
   },
   "mikro-orm": {
     "useTsNode": true,
