--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start-ts": "ts-node src/index.ts",
-    "dev-ts": "nodemon --exec ts-node src/index.ts"
+    "dev-ts": "nodemon --exec ts-node src/index.ts",
+    "migration:create": "mikro-orm migration:create"
   },
   "keywords": [],
   "author": "",
@@ -25,9 +26,11 @@
     "@mikro-orm/migrations": "^4.0.0-alpha.0",
     "@mikro-orm/postgresql": "^4.0.0-alpha.0",
     "apollo-server-express": "^2.17.0",
+    "argon2": "^0.27.0",
     "class-validator": "^0.12.2",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
+    "nodemon": "^2.0.4",
     "pg": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.0.0"
